--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,15 +1,22 @@
 .panels > div {
   border: 1px solid black;
 }
+
+.panels {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 225px auto auto;
+  grid-template-rows: auto auto;
+}
 .panel-info {
-
+  grid-row: span 2;
 }
-.panel-allocation {
+// .panel-allocation {
   
-}
-.panel-balance {
+// }
+// .panel-balance {
   
-}
+// }
 .panel-positions {
-
+  grid-column: span 2;
 }
