--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -20,3 +20,22 @@
 .panel-positions {
   grid-column: span 2;
 }
+
+@media (max-width: 750px) {
+  .panels {
+    grid-template-columns: 225px auto;
+    grid-template-rows: auto auto auto;
+  }
+  .panel-positions {
+    grid-column: span 2;
+  }
+}
+
+@media (max-width: 500px) {
+  .panels {
+    grid-template-columns: auto;
+  }
+  .panel-positions {
+    grid-column: span 1;
+  }
+}
